# MiniDexed_Midi_Master

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
MDM2/: CMakeLists.txt  gpio_pins.h  machine_i2s.c  main.cpp  tusb_config.h  usb_descriptors.c
MDM2/UAC2/: I2S.h  i2s_reader.pio  usb_audio.cpp
MiniDexed_Master/: CMakeLists.txt  MDMA.cpp  MDMA.h  MidiCore.cpp  MidiCore.h  README  fatfs_config.c  gpio_pins.h  i2s_audio  spi_helper.c  spi_helper.h  tud_audio_callbacks.cpp  tud_audio_callbacks.h  tud_callbacks.cpp  tusb_config.h  usb_audio.cpp  usb_audio.h  usb_descriptors.c
MiniDexed_Master/Buttons/: Buttons.cpp  Buttons.h
MiniDexed_Master/Dexed/: TG.cpp  TG.h  sysex format.txt
MiniDexed_Master/FatFs/: CMakeLists.txt
MiniDexed_Master/FatFs/include/: my_debug.h
MiniDexed_Master/FatFs/sd_driver/: sd_spi.c  spi.c
MiniDexed_Master/Fonts/: OpenSans7regular.h  OpenSans8regular.h  OpenSans9regular.h  OpenSansBold14.h  OpenSansBold15.h  OpenSansBoldCondensed14.h  OpenSansBoldCondensed15.h  OpenSansBoldCondensed16.h  RobotoCondensed.h  RobotoCondensed10.h  RobotoMono12.h
MiniDexed_Master/GFX-lib/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_SPITFT.cpp  Adafruit_SPITFT.h  CMakeLists.txt  Print.cpp  Print.h  TFT.cpp  TFT.h
MiniDexed_Master/MIDI/: CMakeLists.off  MIDI.h  MIDI.hpp  midi_Settings.h
MiniDexed_Master/Menu/: MainMenu.cpp  MainMenu.h  Pots.cpp  Pots.h  callback_arrays.h  card_menu.cpp  card_menu.h  readme.md  string_table.h
MiniDexed_Master/Pots/: Pots.cpp  Pots.h
MiniDexed_Master/Screen/: MainMenu.cpp  MainMenu.h  readme.md  screen.cpp  screen.h  string_table.h
MiniDexed_Master/UAC2/: I2S.cpp  machine_i2s.c  usb_audio.cpp  usb_audio.h
MiniDexed_Master/hagl/: CMakeLists.txt
MiniDexed_Master/hagl/src/: hagl.c
MiniDexed_Master/hagl_hal/: CMakeLists.txt  mipi_display.c  spi_helper.c
MiniDexed_Master/i2s/: I2S.cpp  I2S.h  i2s_reader.pio  machine_i2s.c
MiniDexed_Master/i2s_input/: i2s_input.cpp  main.cpp  sph0645.pio
MiniDexed_Master/utils/: MovingAvg.cpp  MovingAvg.h  tools.c  tools.h
